force-app/main/default/objects/Link_IndividualOrganizationRelationship__c/Link_IndividualOrganizationRelationship__c.object-meta.xml
<CustomObject>
    <description>This Junction Object relates individuals to the organizations they belong to.</description>
    <label>Individual-to-Organization Relationship</label>
    <nameField>
        <displayFormat>L-IO-{00000}</displayFormat>
        <label>Organization Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual-to-Organization Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>