force-app/main/default/objects/Link_IndividualOrganizationRelationship__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <description>This field captures the individual related to the organization on the other end of this junction record.</description>
    <label>Individual</label>
    <referenceTo>Individual__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Individual_to_Organization_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>