force-app/main/default/objects/Link_IndividualOrganizationRelationship__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field represents the organization connected to the individual on the other end of this junction object.</description>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Individuals</relationshipLabel>
    <relationshipName>Individual_to_Organization_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>