force-app/main/default/objects/Link_IndividualOrganizationRelationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>This field captures the type of relationship that the individual bears to the organization.</description>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>